css/default.css
/* modified from http://www.yinwang.org/main.css */
body {
    font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
    background-color: white;
    font-size: 100%;
    color: #222435;
    word-break: break-word;
}

div.main {
    margin: auto;
    padding: 2% 5% 5% 5%;
    width: 700px;
    line-height: 150%;
    border: 1px solid LightGrey;
    word-break: break-word;
}

/* Site header - home link */
div.site-header {
    text-align: center;
    padding: 0.5em 0 1em 0;
    border-bottom: 2px solid #e0e0e0;
    margin-bottom: 1.5em;
}

a.site-brand {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 0.5em;
    text-decoration: none;
    padding: 0.3em 0.8em;
    border-radius: 4px;
    transition: all 0.2s ease;
    /* 与标题同一字号基准，logo 用 em 与「阿男的小窝」对齐 */
    font-size: 1.5em;
    /* 避免继承 .main 的 150% 行高，否则行框过高会导致 logo 与字形视觉不齐 */
    line-height: 1;
}

img.site-logo {
    height: 0.88em;
    width: 0.88em;
    border-radius: 0.2em;
    object-fit: cover;
    flex-shrink: 0;
    display: block;
    /* 相对 Palatino/中文标题略作下移，与字重心的光学对齐 */
    transform: translateY(0.06em);
}

span.site-title {
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
    font-size: 1em;
    font-weight: 600;
    color: #555;
    line-height: 1.15;
}

a.site-brand:hover {
    background-color: #f0f0f0;
    text-decoration: none;
}

a.site-brand:hover span.site-title {
    color: #204A87;
}

H1, H2, H3, H4, H5, H6 {
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
    width: 98%;
    line-height: 150%;
    color: #666666;
    word-break: break-word;
}

H1 { font-size: 1.6em; }
H2 { font-size: 1.45em; }
H3 { font-size: 1.25em; }
H4 { font-size: 1.12em; }
H5 { font-size: 1.05em; }
H6 { font-size: 1em; }

H1, H2 {
    margin-bottom: 1.67em;
    padding: 0.2em;
    border-bottom: 2px LightGrey solid;
}

H3, H4 {
    margin-top: 2.14em;
    margin-bottom: 1.5em;
    border-bottom: 1px LightGrey solid;
}

H5, H6 {
    margin-top: 1.4em;
    margin-bottom: 0.75em;
    font-weight: 600;
}

blockquote {
    margin: 0 0 0 0.25em;
    padding: 0 0 0 0.5em;
    border-left: 0.25em lightgrey solid;
    word-break: break-word;
}

pre {
    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
    border: solid 1px #ddd;
    border-radius: 3px;
    background-color: #f8f8ff;
    padding: 6px 10px;
    font-size: 1em;
    line-height: 100%;
    overflow: auto;
    word-break: break-word;
}

code {
    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
    font-size: 0.75em;
    border: solid 1px #ddd;
    border-radius: 3px;
    background-color: #f8f8ff;
    margin: 0 2px;
    padding: 0px 5px;
    word-break: break-word;
}

pre code {
    border: none;
    margin: 0;
    padding: 0;
    background-color: transparent;
    word-break: break-word;
}

a {
    text-decoration: none;
    padding: 1px;
    color: #204A87;
    word-break: break-word;
}

a:hover {
    text-decoration: underline;
}

div.tag_cloud a {
    word-break: break-word;
}

div.nav a {
    text-decoration: none;
    color: #555;
}

div.nav a:hover {
    background-color: LightGrey;
    color: #ffffff;
}

div.nav {
    border-top: 1px solid #d4d4d4;
    border-left: 1px solid #d4d4d4;
    border-right: 1px solid #d4d4d4;
    margin: auto;
    padding: 0 5% 0 5%;
    width: 700px;
    height: 1.5em;
    line-height: 150%;
    font-size: 1em;
}

div.nav_rss {
    width: 20%;
    text-align: right;
    float: right;
}

div.nav_nav {
    width: 80%;
    float: left;
}

img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
    max-width: 100%;
}

img.emoji {
    display: inline;
    margin-bottom: 0;
}

hr {
    border: 0;
    height: 2px;
    background-color: LightGrey;
    margin: 0.75em 0;
}

strong {
    color: #666666;
}

div.overview {
    margin: 1.75em 1.25em 1.75em 1.25em;
}

div.detail {
    margin-left: 28%;
    word-break: break-word;
}

div.date {
    padding-top: 1px;
    float: left;
    width: 25%;
    color: #555;
    text-align: right;
    font-style: italic;
    font-size: 0.75em;
}

div.paginator {
    margin-left: 20%;
    float: center;
    width: 60%;
    color: #555;
    text-align: center;
    font-size: 0.75em;
}

.prev_next {
    display: block;
    padding: 0;
    padding-top: 0.6em;
}

.prev_next li {
    list-style-type: none;
    padding: 0 0 0.2em;
}

.prev_next li span {
    padding: 0 0.5em 0 0.5em;
    background-color: lightslategrey;
    color: #fff;
    margin-right: 0.5em;
}

div.post_footer {
    text-align: right;
    font-size: 0.9em;
    font-style: italic;
}

div.post_footer a {
    border: LightGrey 1px dashed;
}

table {
    border-collapse: collapse;
}

th {
    padding: 0.375em 0.8125em;
    border: 1px solid #ddd;
    font-weight: bold;
}

td {
    padding: 0.375em 0.8125em;
    border: 1px solid #ddd;
}

tr:nth-child(2n) {
    background-color: #f8f8f8;
}

